--- a/DQD/Pages/ContentPage.xaml
+++ b/DQD/Pages/ContentPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page
+﻿<base:BaseContentPage
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:DQD.Net.Pages"
@@ -6,6 +6,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:model="using:DQD.Core.Models.CommentModels"
+    xmlns:base="using:DQD.Net.Base"
     xmlns:control="using:DQD.Core.Controls"
     xmlns:Converters="using:DQD.Core.Tools"
     x:Class="DQD.Net.Pages.ContentPage"
@@ -431,4 +432,4 @@
         <!--#endregion-->
 
     </Grid>
-</Page>
+</base:BaseContentPage>
